[project]
name = "l0mdt-gnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Humphreys", email = "dahumphr@cern.ch" }
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "pyyaml",
    "numba",
    "argparse",
    "scipy",
    "torch",
    "torch_geometric"
]

[project.scripts]
l0mdt-gnn = "l0mdt_gnn:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
